# iNAT_TREES2

./: .replit  app.py  pyproject.toml
.streamlit/: config.toml
assets/: style.css
attached_assets/: Pasted-2025-02-18-02-58-50-833-main-INFO-Importing-required-packages-2025-02-18-02-58-52-973--1739847548592.txt  Pasted-Ah-a-list-index-out-of-range-error-This-is-very-specific-and-helpful-In-Python-this-typically--1739595738413.txt  Pasted-Ah-now-I-can-see-the-issue-In-your-hierarchy-data-the-higher-taxonomic-ranks-kingdom-phylum-cl-1739636879150.txt  Pasted-Ah-now-I-see-the-issue-clearly-Looking-at-your-sample-data-the-taxon-kingdom-taxon-phylum-etc--1739637897216.txt  Pasted-Ah-yes-Looking-at-the-flow-of-data-1-From-iNaturalist-API-each-taxon-has-a-unique-ID-and-each-1739635720639.txt  Pasted-Authentication-iNaturalist-is-an-OAuth2-provider-and-supports-the-Authorization-Code-Resource-Owne-1740017778002.txt  Pasted-Below-is-the-updated-version-of-the-create-plotly-tree-method-The-change-removes-the-inline-branc-1739635014769.txt  Pasted-Building-complete-taxonomy-for-Amphibians-Making-API-request-with-params-user-login-awoodroof-1739733808463.txt  Pasted-I-see-a-mix-of-code-snippets-and-what-looks-like-partial-SQL-implementation-Let-s-organize-this-pro-1739664994213.txt  Pasted-I-see-the-circular-import-issue-The-problem-is-1-app-py-imports-INaturalistAPI-2-inat-api-1739731359391.txt  Pasted-I-see-the-issue-To-properly-filter-by-taxonomic-rank-we-need-to-track-and-check-the-full-ancestry--1739597414953.txt  (+22 more)
utils/: auth.py  data_processor.py  data_utils.py  (+4 more)
